# vigir_object_template_manager

objcet_template_alignment_plugin/: CMakeLists.txt  package.xml
vigir_manipulation_controller/: CMakeLists.txt  README.md  package.xml
vigir_manipulation_controller/include/vigir_manipulation_controller/: vigir_manipulation_controller.h
vigir_manipulation_controller/launch/: l_robotiq_manipulation_control.launch  l_stump_manipulation_control.launch  l_vt_hand_manipulation_control.launch  r_robotiq_manipulation_control.launch  r_stump_manipulation_control.launch  r_vt_hand_manipulation_control.launch
vigir_manipulation_controller/src/: vigir_manipulation_controller.cpp
vigir_object_template_rviz_plugin/: CMakeLists.txt  package.xml
vigir_object_template_server/: CMakeLists.txt  package.xml  vigir_object_template_server.xml
vigir_object_template_server/action/: AlignObjectTemplate.action
vigir_object_template_server/src/: main.cpp  object_template_server.cpp  object_template_server.h
vigir_ocs_template_nodelet/: package.xml
vigir_ocs_template_nodelet/src/: main.cpp  template_nodelet.cpp  template_nodelet.h
