<?xml version="1.0"?>
<package>
  <name>vigir_manipulation_controller</name>
  <version>0.0.0</version>
  <description>The vigir_manipulation_controller package</description>

  <maintainer email="romay@sim.tu-darmstadt.de">Alberto Romay</maintainer>  
  <author email="romay@sim.tu-darmstadt.de">Alberto Romay</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>vigir_grasp_msgs</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>vigir_object_template_msgs</build_depend>
  <build_depend>vigir_planning_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>vigir_grasp_msgs</run_depend>
  <run_depend>geometric_shapes</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>vigir_object_template_msgs</run_depend>
  <run_depend>vigir_planning_msgs</run_depend>
  <run_depend>actionlib</run_depend>

  <export>
  </export>
</package>
